--- a/top.html
+++ b/top.html
@@ -1,62 +1,47 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<title>Facts of Environmental Science - EVS for Class 11 and 12 students [ISC board], undergrads, and other folks.</title>
-        <link rel="shortcut icon" href="\title_image"/>
+    	<title>Arya T Gupta</title>
+        <link rel="shortcut icon" href="/arya.png"/>
         <link href="\styles.css" type="text/css" rel="stylesheet"/>
         
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<script>
-  			(adsbygoogle = window.adsbygoogle || []).push({
-    			google_ad_client: "ca-pub-4872933753971674",
-    			enable_page_level_ads: true
-  			});
-		</script>
     </head>
-    <body >
+    <body>
         <div id="header">
         	<table style="width:90%">
         		<tbody>
         			<tr>
         				<td>
-        					<a  title="Foevs" href="\">
-                				<img src="\title_image" id="headerImage" style="height: 132px; width: 132px">
+        					<a  title="Arya T Gupta" href="\">
+                				<img src="/arya.png" id="headerImage" style="height: 132px; width: 132px">
             				</a>
             			<td>
             				<h1 style="text-align: center">
-                				FACTS OF ENVIRONMENTAL SCIENCE
+                				ARYA TANMAY GUPTA
             				</h1>
+        			<td>
+        				<a  title="MSU" href="\">
+                			<img src="/msu.jpg" id="headerImage" style="height: 132px; width: 132px">
+            				</a>
+        			<td>
+        				<a  title="DU" href="\">
+                			<img src="/du.png" id="headerImage" style="height: 132px; width: 132px">
+            				</a>
             	</tbody>
             </table>
         </div>
-        <form onsubmit="searchthisSite()">
-        <p style="text-align:right">
-        	<input placeholder="Search" id="searchfoevs"></input>
-        	<button>Search foevs.in</button>
-        </p>
-        </form>
+        
         <div id="nav">
             <ul>
                 <li>
                     <a href="\">Home</a>
                 </li>
-                <li>
-               		<a href="\Home/contents/info.html">Contents</a>
-				</li>
-                <li>
-                	<a href="\Home/contact/info.html">Contact Us</a>
+		<li>
+                	<a href="/articles.html">Articles</a>
                 </li>
-                <li>
-                	<a href="\Home/acknowledgement/info.html">Acknowledgements</a>
-                </li>
+		<li>
+               		<a href="experience-teaching.html">Teaching Experience</a>
+		</li>
             </ul>
         </div>
         <p></p>
-        <script>
-        	function searchthisSite(){
-				var input = document.getElementById("searchfoevs").value;
-				search = input + "+site%3Ahttp%3A%2F%2Ffoevs.in";
-				search = "https://www.google.com/search?q="+search;
-				window.open(search);
-        	}
-        </script>
