--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
+<html>
 <script> 
 	$(function(){
-		$("html").load("top.html"); 
+		$("#otp").load("top.html"); 
 	});
 </script> 
-<html>
-<div id=main>      
+<div id="top"></div>      
 <p>I am currently working on distributed systems, graph theory, theory of computation. My advisor is <a href="http://www.cse.msu.edu/~sandeep/"><u>Professor Sandeep S Kulkarni</u></a>.
 <p>During my undergraduate, I dealt with software projects, projects based on embedded systems, intelligence, and analysis. I instructed over software development, embedded systems (arduino, atmega, raspberry), and programming (Java, Python, C, C++).
 <p>I am also interested in modelling of natural systems, particularly in computational biology and applications of computer science in healthcare, agriculture.
@@ -14,7 +14,6 @@
 <p>Social Media: <a title="Linkedin" href="https://www.linkedin.com/in/aryatanmaygupta/" target="_blank">
     		<img style="height: 12px" src="\Linkedin">
     	</a>
-</div>
 </body>
 <footer style="text-align: center">
 	This website runs best on the latest version of Google Chrome. &#169; A T Gupta
