--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <script> 
 	$(function(){
-		$("#otp").load("top.html"); 
+		$("#top").load("top.html"); 
 	});
 </script> 
 <div id="top"></div>      
