--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+    	<title>Arya T Gupta</title>
+        <link rel="shortcut icon" href="/arya.png"/>
+        <link href="\styles.css" type="text/css" rel="stylesheet"/>
+</head>
+<body>
 <script> 
 	$(function(){
 		$("#top").load("top.html"); 
