--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
         <link href="\styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-<script> 
-	$(function(){
-		$("#top").load("top.html"); 
-	});
-</script> 
-<div id="top"></div>      
+
+<script>$("#top").load("top.html");</script> 
+
+<div id="top"></div> 
+
 <p>I am currently working on distributed systems, graph theory, theory of computation. My advisor is <a href="http://www.cse.msu.edu/~sandeep/"><u>Professor Sandeep S Kulkarni</u></a>.
 <p>During my undergraduate, I dealt with software projects, projects based on embedded systems, intelligence, and analysis. I instructed over software development, embedded systems (arduino, atmega, raspberry), and programming (Java, Python, C, C++).
 <p>I am also interested in modelling of natural systems, particularly in computational biology and applications of computer science in healthcare, agriculture.
