--- a/top.html
+++ b/top.html
@@ -1,4 +1,12 @@
-        <div id="header">
+<!DOCTYPE html>
+<html>
+<head>
+    	<title>Arya T Gupta</title>
+        <link rel="shortcut icon" href="/arya.png"/>
+        <link href="\styles.css" type="text/css" rel="stylesheet"/>
+</head>
+<body>
+	<div id="header">
         	<table style="width:90%">
         		<tbody>
         			<tr>
