--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<embed type="text/html" src="top.html" style="min-height:20%;width:100%;">
+<embed type="text/html" src="top.html" style="min-height:250px;width:100%;">
 
 <p>I am currently working on distributed systems, graph theory, theory of computation. My advisor is <a href="http://www.cse.msu.edu/~sandeep/"><u>Professor Sandeep S Kulkarni</u></a>.
 <p>During my undergraduate, I dealt with software projects, projects based on embedded systems, intelligence, and analysis. I instructed over software development, embedded systems (arduino, atmega, raspberry), and programming (Java, Python, C, C++).
