--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+    	<title>Arya T Gupta</title>
+        <link rel="shortcut icon" href="/arya.png"/>
+        <link href="\styles.css" type="text/css" rel="stylesheet"/>
+</head>
+<body>
+
 <embed type="text/html" src="top.html" style="min-height:250px;width:100%;">
 
 <p>I am currently working on distributed systems, graph theory, theory of computation. My advisor is <a href="http://www.cse.msu.edu/~sandeep/"><u>Professor Sandeep S Kulkarni</u></a>.
