--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-    	<title>Arya T Gupta</title>
-        <link rel="shortcut icon" href="/arya.png"/>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<script>
+	$(document).ready(function(){
+		$('#top').load("top.html");
+	});
+</script>
+<head id="head">
         <link href="\styles.css" type="text/css" rel="stylesheet"/>
-	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	
-	<script>
-		$(document).ready(function(){
-			$('#top').load("top.html");
-		});
-	</script>
 </head>
 <body>
 
