--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <script>
 	$(document).ready(function(){
 		$('#top').load("top.html");
+		$('#head').load("head.html");
 	});
 </script>
 <head id="head">
