--- a/bottom.html
+++ b/bottom.html
@@ -1,6 +1,2 @@
-    <footer style="text-align: center">
-    	<p></p>
-    	&#169;
+        This website runs best on the latest version of Google Chrome. &#169; A T Gupta
     	<p>
-    </footer>
-</body>
