--- a/index.html
+++ b/index.html
@@ -24,8 +24,5 @@
     		<img style="height: 12px" src="\Linkedin">
     	</a>
 </body>
-<footer style="text-align: center">
-	This website runs best on the latest version of Google Chrome. &#169; A T Gupta
-    	<p>
-</footer>
+<footer id="footer" style="text-align: center"></footer>
 </html>
