--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	$(document).ready(function(){
 		$('#top').load("top.html");
 		$('#head').load("head.html");
+		$('#bottom').load("bottom.html");
 	});
 </script>
 <head id="head">
@@ -24,5 +25,5 @@
     		<img style="height: 12px" src="\Linkedin">
     	</a>
 </body>
-<footer id="footer" style="text-align: center"></footer>
+<footer id="bottom" style="text-align: center"></footer>
 </html>
