--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
 <script>
 	$(document).ready(function(){
+		$('#brain').load("brain.html");
 		$('#top').load("top.html");
-		$('#head').load("head.html");
 		$('#bottom').load("bottom.html");
 	});
 </script>
-<head id="head">
+<head id="brain">
         <link href="\styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
