--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		$('#bottom').load("bottom.html");
 	});
 </script>
-<head id="brain">
+<head>
+	<div id="brain"></div>
         <link href="\styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
