--- a/articles.html
+++ b/articles.html
@@ -24,5 +24,5 @@
 	<p>More coming soon.. ..
 
 </body>
-<footer id="bottom" style="text-align: center"></footer>
+<footer id="bottom"></footer>
 </html>
