--- a/experience-teaching.html
+++ b/experience-teaching.html
@@ -99,5 +99,5 @@ function myFunction(id) {
 </script>
 
 </body>
-<footer id="bottom" style="text-align: center"></footer>
+<footer id="bottom"></footer>
 </html>
