--- a/index.html
+++ b/index.html
@@ -26,5 +26,5 @@
     		<img style="height: 12px" src="\Linkedin">
     	</a>
 </body>
-<footer id="bottom" style="text-align: center"></footer>
+<footer id="bottom"></footer>
 </html>
