Update and rename experience-teaching.html to teaching.html

--- a/teaching.html
+++ b/teaching.html
@@ -18,7 +18,7 @@
 	<div id="top"></div>
 	
 	<p>
-	<h2>My Teaching Experience</h2>
+	<h2>My Teaching Assignments</h2>
 	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Graduate Teaching Assistant</i></b>, USA Public Land Grant, Michigan State University. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
