--- a/top.html
+++ b/top.html
@@ -32,7 +32,7 @@
                 	<a href="/articles.html">Articles</a>
                 </li>
 		<li>
-               		<a href="experience-teaching.html">Teaching Experience</a>
+               		<a href="teaching.html">Teaching Assignments</a>
 		</li>
             </ul>
         </div>
