--- a/teaching.html
+++ b/teaching.html
@@ -75,7 +75,7 @@
 
 		<span id="curtainText" style="display: none;">
 		<p>
-			<br>&#8226; &emsp; Embedded systems (as Member at Centre for Robotics and Artificial Intelligence)
+			&#8226; &emsp; Embedded systems (as Member at Centre for Robotics and Artificial Intelligence)
 			<br>&#8226; &emsp; Software development, website development (as President at the Quicksort Society)
 			<br>&#8226; &emsp; Workshop series on Java-core.
 		</p>
