--- a/teaching.html
+++ b/teaching.html
@@ -23,7 +23,7 @@
 
 		<span id="curtainText" style="display: none;">
 		<p>
-			&emsp; September 2020 till date
+			&emsp; August 2020 till date
 			<br>&emsp;
 			<br>&emsp; &emsp; (1) Fall 2020: CSE-231
 			<br>&emsp; &emsp; (2) Spring 2021: CSE 231
@@ -44,7 +44,7 @@
 
 		<span id="curtainText" style="display: none;">
 		<p>
-			&emsp; August 2018, to July 2020
+			&emsp; August 2018, to July 2020 (2 years)
 			<br>&emsp;
 			<br>&emsp; &emsp; (1) Autumn 2018 (07 to 11) CS266.
 			<br>&emsp; &emsp; (2) Winter 2019 (01 to 04) CS162.
