--- a/top.html
+++ b/top.html
@@ -34,6 +34,9 @@
 		<li>
                		<a href="teaching.html">Teaching Assignments</a>
 		</li>
+		<li>
+               		<a href="projects.html">Projects</a>
+		</li>
             </ul>
         </div>
         <p></p>
