--- a/articles.html
+++ b/articles.html
@@ -18,8 +18,8 @@
 	<div id="top"></div>
 	<h2>My Articles</h2>
 	<h4>Click to go to the article</h4>
-	<p>[1] Gupta, A. T., Lokhande, S. A., and Mondal, K. (2021) Burning Grids and Intervals. In: Mudgal A., Subramanian C.R. (eds) Algorithms and Discrete Applied Mathematics. CALDAM 2021. Lecture Notes in Computer Science, vol 12601. Springer, Cham. https://doi.org/10.1007/978-3-030-67899-9_6. 
-	<p>[2] Gupta, A. T. (2018) A Software System Proposing the Processing of Crowdsourced Data to Monitor a Flood Event: An A.I. Approach. Open Water Journal 5(2) 17-23.
+	<p>[1] <a href="https://link.springer.com/chapter/10.1007/978-3-030-67899-9_6">Gupta, A. T., Lokhande, S. A., and Mondal, K. (2021) Burning Grids and Intervals. In: Mudgal A., Subramanian C.R. (eds) Algorithms and Discrete Applied Mathematics. CALDAM 2021. Lecture Notes in Computer Science, vol 12601. Springer, Cham. https://doi.org/10.1007/978-3-030-67899-9_6</a>.
+	<p>[2] <a href="https://scholarsarchive.byu.edu/openwater/vol5/iss2/2/">Gupta, A. T. (2018) A Software System Proposing the Processing of Crowdsourced Data to Monitor a Flood Event: An A.I. Approach. Open Water Journal 5(2) 17-23</a>.
 	<p></p>
 	<p>More coming soon.. ..
 
