--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
 	});
 </script>
 <head>
+	<title>Arya T Gupta</title>
 	<div id="brain"></div>
         <link href="\styles.css" type="text/css" rel="stylesheet"/>
 </head>
