--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,8 @@
 	});
 </script>
 <head>
-	<title>Arya T Gupta</title>
 	<div id="brain"></div>
+	<link rel="shortcut icon" href="/arya.png"/>
         <link href="\styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
