--- a/teaching.html
+++ b/teaching.html
@@ -11,6 +11,7 @@
 </script>
 <head>
 	<div id="brain"></div>
+	<link rel="shortcut icon" href="/arya.png"/>
         <link href="\styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
