--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>2. <b><i>Alchaird - an automated door lock</i><b> (embedded system: Arduino) (as Member at Centre for Robotics and Artificial Intelligence). &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>2. <b><i>Alchaird - an automated door lock</i></b> (embedded system: Arduino) (as Member at Centre for Robotics and Artificial Intelligence). &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
