--- a/top.html
+++ b/top.html
@@ -35,6 +35,9 @@
                		<a href="teaching.html">Teaching Assignments</a>
 		</li>
 		<li>
+               		<a href="non-teaching.html">Non-Teaching Assignments</a>
+		</li>
+		<li>
                		<a href="projects.html">Projects</a>
 		</li>
             </ul>
