--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@
 		<span id="curtainText" style="display: none;">
 		<p>
 			&emsp; August 2015 to March 2016.
-			&emsp; 4 members.
+			<br>&emsp; 4 members.
 				<br>&emsp; &emsp; Used Firebird V in the project. A system of two robots working to search and rescue places of emergency.
 				<br>&emsp; &emsp; A (search) robot moves around the arena to find the people with medical emergencies. It then signals the rescue robot. The rescue robot comes to the location and supplies the medical box to the patient.
 				<br>&emsp; &emsp; Sponsored by EYantra, Indian Institute of Technology Bombay.
@@ -117,7 +117,7 @@
 		<span id="curtainText" style="display: none;">
 		<p>
 			&emsp; September 2015 to December 2015
-			&emsp; 4 members.
+			<br>&emsp; 4 members.
 				<br>&emsp; &emsp; A refreshable braille character prototype built with solenoid actuator.
 				<br>&emsp; &emsp; Arduino Uno used as the brain of the machine.
 				<br>&emsp; &emsp; The project assumed to be increased in size where an array of braille characters are used to display sentences; the data files be stored in the machine.
@@ -125,13 +125,13 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>5. <b><i>Welcome to Yamuna Biodiversity Park</i><b> (software: Java) (as Software Developer, Govt.of Delhi, Yamuna Biodiversity Park). &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>5. <b><i>Welcome to Yamuna Biodiversity Park</i></b> (software: Java) (as Software Developer, Govt.of Delhi, Yamuna Biodiversity Park). &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
 			&emsp; September 2015 to December 2015
-			&emsp; Supervisor: Dr Faiyaz A Khudsar, Scientist In-charge, Yamuna Biodiversity Park, Delhi Development Authority, Govt. of NCT of Delhi.
-			&emsp; 2 members.
+			<br>&emsp; Supervisor: Dr Faiyaz A Khudsar, Scientist In-charge, Yamuna Biodiversity Park, Delhi Development Authority, Govt. of NCT of Delhi.
+			<br>&emsp; 2 members.
 				<br>&emsp; &emsp; A software for the touch screens of Yamuna Biodiversity Park, DDA, Govt. of NCT of Delhi. To display all the information – text, photos and videos – of the park and all the creature species who live there – to the visitors and researchers who come to visit there.
 		</p>
 		</span>
