--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 
 		<span id="curtainText" style="display: none;">
 		<p>
-			&emsp; August 2019 to July 2020
+			August 2019 to July 2020
 			<br>&emsp; Supervisor: Dr Swapnil A Lokhande, Assistant Professor, Indian Institute of Information Technology Vadodara, India.
 				<br>&emsp; &emsp; Studied the graph burning problem. We showed that graph burning is NP-Complete on interval graphs, permutation graphs and disc graphs. As corollary, we have that burning of trees, chordal graphs, path forests, planar graphs, bipartite graphs, spider graphs, forests is NP-Complete. For these corollaries, results are present in the literature prior to our work.
 				<br>&emsp; &emsp; Articles published: <a href="https://link.springer.com/chapter/10.1007/978-3-030-67899-9_6"><u>Burning Grids and Intervals</u></a>.
@@ -38,7 +38,7 @@
 
 		<span id="curtainText" style="display: none;">
 		<p>
-			&emsp; January 2017 to April 2017
+			January 2017 to April 2017
 			<br>&emsp; Supervisor: Mr Kamlesh Raghuvanshi, Assistant Professor, Assistant Professor, Department of Computer Science, Ramanujan College (University of Delhi).
 			<br>&emsp; 4 members.
 				<br>&emsp; &emsp; Reduced Cost Telemetry Device: takes various observations from a human body, such as pulse, temperature and sends the data over the network to a remote android smartphone. Raspberry pi as the central microcontroller. Pulses read by Arduino Uno and then the data is sent to the central microcontroller, which sends data to a remote device connected to the Internet using its global IP address.
@@ -52,7 +52,7 @@
 
 		<span id="curtainText" style="display: none;">
 		<p>
-			&emsp; September 2016 to November 2016
+			September 2016 to November 2016
 			<br>&emsp; Supervisor: Ms Bhavya Ahuja, Assistant Professor, Assistant Professor, Department of Computer Science, Ramanujan College (University of Delhi).
 			<br>&emsp; 4 members.
 				<br>&emsp; &emsp; An embedded controller to integrate any electronic device(s) with, proposing software and hardware platform independence and prevention of spoofing.
@@ -65,7 +65,7 @@
 
 		<span id="curtainText" style="display: none;">
 		<p>
-			&emsp; June 2015 to December 2015
+			June 2015 to December 2015
 			<br>&emsp; Supervisor: Dr Sucheta Chakrabarti, Scientist F, Govt. of India, Defence Research and Development Organization, Scientific Analysis Group.
 				<br>&emsp; &emsp; Worked on the basics of cryptography. Analysed various cryptographic techniques and algorithms.
 				<br>&emsp; &emsp; Worked on Edon80 stream cypher. Tested using strings and images. Analysed using the NIST (National Institute of Standards and Technology) Test.
@@ -79,7 +79,7 @@
 
 		<span id="curtainText" style="display: none;">
 		<p>
-			&emsp; March 2014 to July 2016
+			March 2014 to July 2016
 			<br>&emsp; Supervisor: Dr Nirmalya Samantha, Convener, Time Table Committee.
 			<br>&emsp; 2 members.
 				<br>&emsp; &emsp; Intent: To make and store time table of the college departments. Using the software, a person will be able to monitor or make changes to the time table where required.
@@ -92,7 +92,7 @@
 
 		<span id="curtainText" style="display: none;">
 		<p>
-			&emsp; April 2016
+			April 2016
 				<br>&emsp; &emsp; Automatic (Embedded) Door Lock for Centre for Robotics and Artificial Intelligence, Ramanujan College.
 				<br>&emsp; &emsp; Uses Arduino Uno as the central microcontroller (brain of the machine). Pins as keys for the password.
 		</p>
@@ -103,7 +103,7 @@
 
 		<span id="curtainText" style="display: none;">
 		<p>
-			&emsp; August 2015 to March 2016.
+			August 2015 to March 2016.
 			<br>&emsp; 4 members.
 				<br>&emsp; &emsp; Used Firebird V in the project. A system of two robots working to search and rescue places of emergency.
 				<br>&emsp; &emsp; A (search) robot moves around the arena to find the people with medical emergencies. It then signals the rescue robot. The rescue robot comes to the location and supplies the medical box to the patient.
@@ -116,7 +116,7 @@
 
 		<span id="curtainText" style="display: none;">
 		<p>
-			&emsp; September 2015 to December 2015
+			September 2015 to December 2015
 			<br>&emsp; 4 members.
 				<br>&emsp; &emsp; A refreshable braille character prototype built with solenoid actuator.
 				<br>&emsp; &emsp; Arduino Uno used as the brain of the machine.
@@ -129,7 +129,7 @@
 
 		<span id="curtainText" style="display: none;">
 		<p>
-			&emsp; September 2015 to December 2015
+			September 2015 to December 2015
 			<br>&emsp; Supervisor: Dr Faiyaz A Khudsar, Scientist In-charge, Yamuna Biodiversity Park, Delhi Development Authority, Govt. of NCT of Delhi.
 			<br>&emsp; 2 members.
 				<br>&emsp; &emsp; A software for the touch screens of Yamuna Biodiversity Park, DDA, Govt. of NCT of Delhi. To display all the information – text, photos and videos – of the park and all the creature species who live there – to the visitors and researchers who come to visit there.
