--- a/non-teaching.html
+++ b/non-teaching.html
@@ -1,33 +1,183 @@
-<h2>Working / Other Academic Experience</h2>
-  <div id="curtain" onclick="myFunction(this)"><p>5. <b><i>Welcome to Yamuna Biodiversity Park</i></b> (software: Java) (as Software Developer, Govt.of Delhi, Yamuna Biodiversity Park). &#9663;</p>
+<!DOCTYPE html>
+<html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<script>
+	$(document).ready(function(){
+		$('#brain').load("brain.html");
+		$('#top').load("top.html");
+		$('#bottom').load("bottom.html");
+	});
+</script>
+<head>
+	<div id="brain"></div>
+	<link rel="shortcut icon" href="/arya.png"/>
+        <link href="\styles.css" type="text/css" rel="stylesheet"/>
+</head>
+<body>
+
+	<div id="top"></div>
+	
+	<p>
+	<h2>Working / Other Academic Experience</h2>
+
+ 	<div id="curtain" onclick="myFunction(this)"><p>2. <b><i>Member at Centre for Robotics and Artificial Intelligence</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
-			&emsp; September 2015 to December 2015
-			<br>&emsp; Supervisor: Dr Faiyaz A Khudsar, Scientist In-charge, Yamuna Biodiversity Park, Delhi Development Authority, Govt. of NCT of Delhi.
-			<br>&emsp; 2 members.
-				<br>&emsp; &emsp; A software for the touch screens of Yamuna Biodiversity Park, DDA, Govt. of NCT of Delhi. To display all the information – text, photos and videos – of the park and all the creature species who live there – to the visitors and researchers who come to visit there.
+			July 2015 to June 2017 (2 years)
+				<br>&emsp; Worked on projects at the centre and trained other members of the Centre.
+				<br>&emsp; Projects done:
+					<br>&emsp; &emsp; &#8226; &emsp; Telemetry Device Based on Telecare Medical Information System
+					<br>&emsp; &emsp; &#8226; &emsp; Unitor
+					<br>&emsp; &emsp; &#8226; &emsp; Alchaird
+					<br>&emsp; &emsp; &#8226; &emsp; Simulated Ambulance System
+					<br>&emsp; &emsp; &#8226; &emsp; Brad: The electronic Version of Braille
+				<br>&emsp; Workshops conducted: 8.
+		</p>
+		</span>
+	</div>
+	 <div id="curtain" onclick="myFunction(this)"><p>2. <b><i>President at the Quicksort Society</i><b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science. &#9663;</p>
+
+		<span id="curtainText" style="display: none;">
+		<p>
+			July 2016 to June 2017 (1 year)
+				<br>&emsp; Organized workshops on
+					<br>&emsp; &emsp; &#8226; &emsp; Software development (C++, Java),
+					<br>&emsp; &emsp; &#8226; &emsp; Website development (html, css, javascript, php),
+					<br>&emsp; &emsp; &#8226; &emsp; Embedded systems (Arduino uno, Atmega (2560), Raspberry Pi).
+				<br>&emsp; Guidance to the team with various academic subjects.
+		</p>
+		</span>
+	</div>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>3. <b><i>Software Developer</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
+
+		<span id="curtainText" style="display: none;">
+		<p>
+			March 2014 to August 2016 (2 years 6 months)
+				<br>&emsp; Developed the software "Time Table Ramanujan College".
+		</p>
+		</span>
+	</div>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>4. <b><i>Research Trainee</i></b>, Govt. of India, Defence Research and Development Organisation, Scientific Analysis Group. &#9663;</p>
+
+		<span id="curtainText" style="display: none;">
+		<p>
+			June 2015 to December 2015 (7 months)
+				<br>&emsp; Worked on the project "Development of Quasigroup based Cryptographic Schemes".
+		</p>
+		</span>
+	</div>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>5. <b><i>Software Developer</i></b>, Govt.of Delhi, Yamuna Biodiversity Park. &#9663;</p>
+
+		<span id="curtainText" style="display: none;">
+		<p>
+			July 2014
+				<br>&emsp; Developed the software "Welcome to Yamuna Biodiversity Park".
 		</p>
 		</span>
 	</div>
 
-1. President at the Quicksort Society, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science, July 2016 - June 2017 (1 year).
-2. Member at Centre for Robotics and Artificial Intelligence, Govt. of India, University of Delhi, Ramanujan College, July 2015 - June 2017 (2 years).
-3. Software Developer, Govt. of India, University of Delhi, Ramanujan College. March 2014 - August 2016 (2 years 6 months).
-4. Research Trainee, Govt. of India, Defence Research and Development Organisation, Scientific Analysis Group, June 2015 - December 2015 (7 months).
-5. Software Developer, Govt.of Delhi, Yamuna Biodiversity Park, June 2014 - July 2014 (2 months).
+	<h2>Other Technical Experience</h2>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Supervisor at Turington 2017 technical fest</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science. &#9663;</p>
 
-<h2>Other Technical Experience</h2>
-1. Supervisor at Turington 2017 technical fest, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science, December 2016 - March 2017 (4 months).
-2. Technical Head at Turington (Intercollege) 2014 technical fest, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science, March 2014 - April 2014 (1 month).
-3. Organizer at Turington (Intracollege) 2014 technical fest, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science, December 2013 - January 2014 (2 months).
+		<span id="curtainText" style="display: none;">
+		<p>
+			December 2016 to March 2017
+				<br>&emsp; Supervised (and adviced) the team to develop the
+					<br>&emsp; &emsp; &#8226; &emsp; Website of turington,
+					<br>&emsp; &emsp; &#8226; &emsp; Software for Multiple Choice Questions competition.
+				<br>&emsp; Supervised the team in the organization of the festival.
+		</p>
+		</span>
+	</div>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>2. <b><i>Technical Head at Turington (Intercollege) 2014 technical fest</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science. &#9663;</p>
 
-<h2>Volunteer Experience</h2>
-1. Member at Centre for Ethics and Values, Govt. of India, University of Delhi, Ramanujan College, February 2014 - March 2015 (1 year 2 months).
-2. Core Member at the Foundation Day, Govt. of India, University of Delhi, Ramanujan College, December 2014 (1 month).
-3. Volunteer at Tatva - the Ecology Club, Govt. of India, University of Delhi, Ramanujan College, December 2013 - September 2014 (9 months).
-4. Volunteer at Antargyan 2013 cultural fest, Govt. of India, University of Delhi, Ramanujan College, Dept. of Science and Life, October 2013 (1 month).
-5. Head Boy, Holy Family Generalate, Holy Family Convent School, February 2012 - January 2013 (1 year).
+		<span id="curtainText" style="display: none;">
+		<p>
+			March 2014 to April 2014
+				<br>&emsp; Volunteer in the organization.
+				<br>&emsp; Monitored and regulated all the technical back-end support.
+				<br>&emsp; Developed Java software for the
+					<br>&emsp; &emsp; &#8226; &emsp; MCQ competition Codethon.
+					<br>&emsp; &emsp; &#8226; &emsp; A platform for development and compilation in C++ (built on Java) for a competition.
+		</p>
+		</span>
+	</div>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>3. <b><i>Organizer at Turington (Intracollege) 2014 technical fest</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science. &#9663;</p>
+
+		<span id="curtainText" style="display: none;">
+		<p>
+			December 2013 to January 2014 
+				<br>&emsp; Volunteer in the organization.
+				<br>&emsp; Developed Java software for the MCQ competition Codethon.
+		</p>
+		</span>
+	</div>
+
+	<h2>Volunteer Experience</h2>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Member at Centre for Ethics and Values</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
+
+		<span id="curtainText" style="display: none;">
+		<p>
+			February 2014 to March 2015 (1 year 2 months) 
+				<br>&emsp; Worked on the project "Learning through Community Service".
+				<br>&emsp; Took Part in Gyanodaya Educational Train Journey.
+				<br>&emsp; Took part in the Antardhwani fest, University of Delhi to showcase the project.
+		</p>
+		</span>
+	</div>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>2. <b><i>Core Member at the Foundation Day</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
+
+		<span id="curtainText" style="display: none;">
+		<p>
+			December 2014 
+				<br>&emsp; Volunteer in organization.
+		</p>
+		</span>
+	</div>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>3. <b><i>Volunteer at the Ecology Club</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
+
+		<span id="curtainText" style="display: none;">
+		<p>
+			December 2013 to September 2014 (9 months)
+				<br>&emsp; Volunteered in all the activities and organizations of the group.
+				<br>&emsp; Managed the webpage.
+		</p>
+		</span>
+	</div>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>4. <b><i>Volunteer at Antargyan 2013 cultural fest</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Science and Life. &#9663;</p>
+
+		<span id="curtainText" style="display: none;">
+		<p>
+			October 2013
+				<br>&emsp; A cultural festival of Ramanujan College which was organized to promote the skills and abilities of students in coherence with the Four Year Undergraduate Program, University of Delhi.
+				<br>&emsp; Worked on the project "Malnutrition". Editor of the documentary video.
+		</p>
+		</span>
+	</div>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>5. <b><i>Head Boy</i></b>, Holy Family Generalate, Holy Family Convent School. &#9663;</p>
+
+		<span id="curtainText" style="display: none;">
+		<p>
+			February 2012 to January 2013 (1 year)
+				<br>&emsp; Elected by the students of the school for the position.
+				<br>&emsp; Worked with the students in discipline management and decision making.
+				<br>&emsp; Worked with students on various academic subjects.
+		</p>
+		</span>
+	</div>
 	
 	<script>
 	function myFunction(id) {
@@ -44,3 +194,7 @@
 	  }
 	}
 	</script>
+
+</body>
+<footer id="bottom"></footer>
+</html>
