--- a/projects.html
+++ b/projects.html
@@ -137,6 +137,35 @@
 		</span>
 	</div>
 	
+	<h2>Other projects</h2>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Learning through Community Service</i></b> (humanities research) (as Member at Centre for Ethics and Values). &#9663;</p>
+	
+		<span id="curtainText" style="display: none;">
+		<p>
+			February 2014 to March 2015
+			<br>&emsp; Supervisor: Dr Tushar Kant Mishra, Associate Professor, Ramanujan College (University of Delhi).
+			<br>&emsp; 20 members.
+				<br>&emsp; &emsp; Sponsored by Cluster Innovation Centre, University of Delhi under the Innovation Project Scheme.
+				<br>&emsp; &emsp; Organization of events and awareness programmes related to ethics and community service.
+		</p>
+		</span>
+	</div>
+	
+	<div id="curtain" onclick="myFunction(this)"><p>2. <b><i>Malnutrition</i></b> (humanities reserach) (as Volunteer at Antargyan 2013 cultural fest). &#9663;</p>
+	
+		<span id="curtainText" style="display: none;">
+		<p>
+			August 2013 to October 2013
+			<br>&emsp; Supervisors: Dr Anshika Lumb, Dr Babita Gupta, Assistant Professors, Ramanujan College (University of Delhi).
+			<br>&emsp; 19 members.
+				<br>&emsp; &emsp; A documentary made based on the malady. Interviews of people, medical doctors, officials, statistics, and probable solutions included.
+				<br>&emsp; &emsp; Edited the documentary video. Video display at Lotus Temple Auditorium.
+				<br>&emsp; &emsp; Sponsored by Antargyan 2013 under the subject Science and Life, Four Year Undergraduate Program, University of Delhi.
+		</p>
+		</span>
+	</div>
+	
 	<script>
 	function myFunction(id) {
 	  var x = id.querySelector("#curtainText");
