--- a/non-teaching.html
+++ b/non-teaching.html
@@ -37,7 +37,7 @@
 		</p>
 		</span>
 	</div>
-	 <div id="curtain" onclick="myFunction(this)"><p>2. <b><i>President at the Quicksort Society</i><b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science. &#9663;</p>
+	 <div id="curtain" onclick="myFunction(this)"><p>2. <b><i>President at the Quicksort Society</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science. &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
