--- a/projects.html
+++ b/projects.html
@@ -112,7 +112,7 @@
 		</span>
 	</div>
 	
-	<div id="curtain" onclick="myFunction(this)"><p>4. <b><i>Brad: The electronic version of Braille (embedded system: Arduino)</i></b> (as Member at Centre for Robotics and Artificial Intelligence). &#9663;</p>
+	<div id="curtain" onclick="myFunction(this)"><p>4. <b><i>Brad: The electronic version of Braille</i></b> (embedded system: Arduino) (as Member at Centre for Robotics and Artificial Intelligence). &#9663;</p>
 
 		<span id="curtainText" style="display: none;">
 		<p>
