--- a/non-teaching.html
+++ b/non-teaching.html
@@ -19,7 +19,7 @@
 	<div id="top"></div>
 	
 	<p>
-	<h2>Working / Other Academic Experience</h2>
+	<h2>Working / Other Academic Assignments</h2>
 
  	<div id="curtain" onclick="myFunction(this)"><p>2. <b><i>Member at Centre for Robotics and Artificial Intelligence</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
 
@@ -81,7 +81,7 @@
 		</span>
 	</div>
 
-	<h2>Other Technical Experience</h2>
+	<h2>Other Technical Assignments</h2>
 	
 	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Supervisor at Turington 2017 technical fest</i></b>, Govt. of India, University of Delhi, Ramanujan College, Dept. of Computer Science. &#9663;</p>
 
@@ -121,7 +121,7 @@
 		</span>
 	</div>
 
-	<h2>Volunteer Experience</h2>
+	<h2>Volunteer Assignments</h2>
 	
 	<div id="curtain" onclick="myFunction(this)"><p>1. <b><i>Member at Centre for Ethics and Values</i></b>, Govt. of India, University of Delhi, Ramanujan College. &#9663;</p>
 
