--- a/top.html
+++ b/top.html
@@ -40,6 +40,9 @@
 		<li>
                		<a href="projects.html">Projects</a>
 		</li>
+		<li>
+               		<a href="contact.html">Contact Me</a>
+		</li>
             </ul>
         </div>
         <p></p>
